Extract configuration