@@ -4,6 +4,7 @@
 
 package alice.dip;
 
+import alice.dip.configuration.KafkaClientConfiguration;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
@@ -18,6 +19,7 @@ import alice.dip.AlicePB.NewStateNotification;
 import java.time.Duration;
 import java.util.Arrays;
 
+import java.util.List;
 import java.util.Properties;
 
 public class StartOfRunKafkaConsumer implements Runnable {
@@ -26,42 +28,33 @@ public class StartOfRunKafkaConsumer implements Runnable {
 	Properties properties;
 	DipMessagesProcessor process;
 
+	private final KafkaClientConfiguration configuration;
 
-	public StartOfRunKafkaConsumer(DipMessagesProcessor process) {
-
-		String grp_id = AliDip2BK.KAFKA_group_id;
+	public StartOfRunKafkaConsumer(KafkaClientConfiguration configuration, DipMessagesProcessor process) {
+		this.configuration = configuration;
 		this.process = process;
 
 		properties = new Properties();
-		properties.setProperty(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, AliDip2BK.bootstrapServers);
+		properties.setProperty(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, configuration.bootstrapServers());
 		properties.setProperty(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
 		properties.setProperty(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, ByteArrayDeserializer.class.getName());
 
-		properties.setProperty(ConsumerConfig.GROUP_ID_CONFIG, grp_id);
-		// properties.setProperty(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG,"earliest");
+		properties.setProperty(ConsumerConfig.GROUP_ID_CONFIG, configuration.groupId());
 		properties.setProperty(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "latest");
-
-		// properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG,
-		// StringDeserializer.class);
-		// properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG,
-		// AlicePB.class);
 
 		Thread t = new Thread(this);
 		t.start();
-
 	}
 
 	public void run() {
-
 		try (// creating consumer
-			 KafkaConsumer<String, byte[]> consumer = new KafkaConsumer<String, byte[]>(properties)) {
+			 KafkaConsumer<String, byte[]> consumer = new KafkaConsumer<>(properties)) {
 			// Subscribing
-			consumer.subscribe(Arrays.asList(AliDip2BK.KAFKAtopic_SOR));
+			consumer.subscribe(List.of(configuration.topics().startOfRun()));
 
 			while (true) {
 				ConsumerRecords<String, byte[]> records = consumer.poll(Duration.ofMillis(100));
 				for (ConsumerRecord<String, byte[]> record : records) {
-
 					byte[] cucu = record.value();
 
 					NoMess = NoMess + 1;
@@ -83,13 +76,8 @@ public class StartOfRunKafkaConsumer implements Runnable {
 						// TODO Auto-generated catch block
 						e.printStackTrace();
 					}
-
 				}
-				// consumer.commitAsync();
 			}
-
 		}
-
 	}
-
 }
